# model-a

./: README.md
.github/img/: repo-logo.ai
firmware/core/: .editorconfig  build.gradle  settings.gradle
firmware/core/scripts/install/: install.sh
firmware/core/scripts/install/assets/: config.txt
firmware/core/scripts/run/: run.sh
firmware/core/src/main/java/: module-info.java
firmware/core/src/main/java/tech/anapad/modela/: Arguments.java  Launcher.java  LauncherArguments.java  ModelA.java
firmware/core/src/main/java/tech/anapad/modela/hapticsboard/: HapticsBoardController.java
firmware/core/src/main/java/tech/anapad/modela/jni/: I2CInterface.java
firmware/core/src/main/java/tech/anapad/modela/loadsurface/: LoadSurfaceController.java
firmware/core/src/main/java/tech/anapad/modela/touchscreen/: Touch.java  TouchscreenController.java
firmware/core/src/main/java/tech/anapad/modela/usb/: HIDReport.java  (+4 more)
firmware/core/src/main/resources/logback/: logback.development.xml  logback.production.xml
firmware/native/: CMakeLists.txt  README.md
firmware/native/scripts/: format_source.sh  generate_jni_headers.sh
firmware/native/src/jni/: tech_anapad_modela_jni_I2CInterface.h  tech_anapad_modela_util_i2c_I2CNative.c  tech_anapad_modela_util_i2c_I2CNative.h
firmware/native/src/util/i2c/: i2c.c  i2c.h
firmware/native/src/util/lang/: lang.h
scripts/: rsync_to_target.sh  rsync_to_target_exclude.txt
scripts/development/sync_target/: sync_target.sh  sync_target_exclude.txt
scripts/source/: README.md
scripts/source/sync/: to_target.sh  to_target_exclude.txt
(+64 files in other folders)
